# makoon

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Jenkinsfile  LICENCE  Makefile  README.md  docker-compose.yaml  go.mod  go.sum  main.go  package.json  tasks.lua  wails.json
core/: Cargo.toml
core/src/: error.rs  event.rs  generator.rs  lib.rs  model.rs  operator.rs  repository.rs  repository_json.rs  supported.rs
core/src/db/: mod.rs  repository.rs  repository_json.rs
core/src/dispatcher/: dispatcher.rs  mod.rs  utils.rs
core/src/dispatcher/usecase/: add_node_to_cluster.rs  change_resources.rs  common.rs  create_cluster.rs  delete_cluster.rs  delete_node_from_cluster.rs  mod.rs
core/src/scheduler/: mod.rs
makoon/: Cargo.toml
makoon/src/: main.rs
makoon/src-web/: .gitignore  package.json  pnpm-lock.yaml
makoon/src-web/src/: App.css  Router.tsx  constants.ts  main.tsx  vite-env.d.ts
makoon/src-web/src/api/: api.ts  apps.ts  clusters.ts  model.ts  nodes.ts
makoon/src-web/src/components/: Block.tsx  Content.tsx  FormError.tsx  Header.tsx  LogoContainer.tsx  MainMenu.tsx  Panel.tsx  PropertiesPanel.tsx  Section.tsx  StorageDropdownOption.tsx
makoon/src-web/src/components/ErrorPanel/: ErrorPanel.tsx
makoon/src-web/src/components/Table/: Table.module.scss  Table.tsx
makoon/src-web/src/store/: applicationStore.ts  cluster-management-store.ts  clusterManagementStore.ts  clusterWizardStore.ts  clustersListStore.ts  processing-indicator-store.ts  processingIndicatorStoreUi.ts
makoon/src-web/src/utils/: api.ts  hooks.ts
makoon/src-web/src/views/ClusterList/: ClusterListView.module.scss  ClusterListView.tsx  ClusterStatus.tsx
makoon/src-web/src/views/ClusterManagement/: ClusterManagementView.tsx
makoon/src-web/src/views/ClusterWizard/: ClusterWizardView.tsx  WizardNavigator.tsx
makoon/src-web/src/views/Login/: LoginView.tsx
makoon/src-web/src/views/cluster-creator/: CreatorNavigator.tsx  index.tsx
makoon/src-web/src/views/clusters-management/: index.tsx
makoon/src/handlers/: actix.rs  apps.rs  auth.rs  cluster.rs  cluster_resources.rs  error.rs  export.rs  mod.rs  model.rs  network.rs  nodes.rs  storage.rs
makoon/src/helm/: command_builder.rs  mod.rs
makoon/src/operator/: error.rs  event.rs  generator.rs  mod.rs  model.rs  operator.rs  repository.rs  repository_json.rs
makoon/src/operator/dispatcher/: add_node_to_cluster.rs  common.rs  create_cluster.rs  delete_cluster.rs  delete_node_from_cluster.rs  dispatcher.rs  mod.rs  utils.rs
makoon/src/operator/dispatcher/usecase/: add_node_to_cluster.rs  change_resources.rs  common.rs  create_cluster.rs  delete_cluster.rs  delete_node_from_cluster.rs  mod.rs
makoon/src/operator/ssh/: mod.rs  ssh.rs
proxmox/: Cargo.toml
proxmox/src/: client.rs  client_operations.rs  error.rs  http.rs  lib.rs  model.rs
web/: Cargo.toml  Makefile  typeshare.toml
web/src/: lib.rs  main.rs
web/src-web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
web/src-web/src/: App.tsx  style.css
web/src-web/src/api/: api.ts  auth.ts  cluster_resources.ts  clusters.ts  model.ts  networks.ts  settings.ts  storage.ts
web/src-web/src/components/: Header.tsx  HiddenPassword.tsx  LogoContainer.tsx  MainContainer.tsx  MainMenu.tsx
web/src-web/src/store/: cluster-creator-store.ts  cluster-management-store.ts  clusters-list-store.ts
web/src-web/src/utils/: nodes.ts  size.ts
web/src-web/src/views/cluster-list/: index.tsx
web/src/handlers/: actix.rs  apps.rs  auth.rs  cluster.rs  cluster_resources.rs  error.rs  export.rs  mod.rs  model.rs  network.rs  nodes.rs  settings.rs  storage.rs
web/tests/: e2e_create_cluster.rs
web/tests/common/: makoon_client.rs  mod.rs
(+363 files in other folders)
