[package]
name = "makoon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.25.0"
actix-web = "4.3.0"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proxmox = { path = "../proxmox" }
rust-embed = "6.4.2"
mime_guess = "2.0.4"
typeshare = "1.0.1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.17"
env_logger = "0.9.3"
openssl = "0.10.47"
pem = "2.0.0"
ssh-keys = "0.1.4"
ssh2 = "0.9.4"
rayon = "1.7.0"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }