[package]
name = "makoon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.27.0"
actix-web = "4.3.1"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proxmox = { path = "../proxmox" }
rust-embed = "6.6.1"
mime_guess = "2.0.4"
typeshare = "1.0.1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.17"
env_logger = "0.10.0"
openssl = "0.10.50"
pem = "2.0.1"
ssh-keys = "0.1.4"
ssh2 = "0.9.4"
rayon = "1.7.0"
uuid = { version = "1.3.1", features = ["v4", "fast-rng"] }