[package]
name = "proxmox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.7.1"
log = "0.4.17"
env_logger = "0.10.0"
urlencoding = "2.1.2"
