[package]
name = "web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "makoon"
path = "src/main.rs"

[features]
e2e = []

[dependencies]
core = { path = "../core" }
proxmox-client = { path = "../proxmox-client" }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
actix-web = "4.4"
actix-session = { version = "0.8", features = ["cookie-session"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-embed = "8.0"
mime_guess = "2.0"
typeshare = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
rayon = "1.8"
uuid = { version = "1.4", features = ["v4", "fast-rng"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
